# zkaedi

./: LICENSE  README.md  pyproject.toml
_h_model_z_/: HModelToken.sol  HModelTokenTest.sol  HModelToken_Complete.sol  __init__.py  h_model_complete_omnisolver.js  h_model_interactive_omnisolver.html  h_model_omnisolver.py  hmodel_complete_omnisolver_continuation.js  hmodel_complete_omnisolver_deployment.html  hmodel_complete_omnisolver_final_mastery.js  ultimate_js_blockchain_masterpiece.js
_h_model_z_/chaos/: __init__.py  chaos_shaper.py
_h_model_z_/cli/: __init__.py  main.py
_h_model_z_/core/: __init__.py  harmonic_engine.py  mathematical_core.py
_h_model_z_/polymorphic/: __init__.py  adaptive_flow.py
_h_model_z_/renderers/: __init__.py  live_html.py
_h_model_z_/wells/: __init__.py  softplus_wells.py
tests/: test_core_functionality.py
